nginx.conf has been adapted to handle requests from //prov/.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,10 +11,15 @@ http {
     sendfile        on;
 
     keepalive_timeout  65;
-
+  
+    merge_slashes off; 
+  
     server {
         listen 80;
         server_name tvipstb.net localhost;
+
+        # Исправление //prov/ -> /prov/
+        rewrite ^//prov/(.*)$ /prov/$1 last;
 
         location /prov/ {
             proxy_pass http://127.0.0.1:8000;
