--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,6 +6,6 @@ command=nginx -g "daemon off;"
 autorestart=true
 
 [program:app]
-command=uvicorn app.main:app --host 0.0.0.0 --port 8000
-directory=/
+command=uvicorn main:app --host 0.0.0.0 --port 8000
+directory=/src
 autorestart=true
