--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
         # Исправление //prov/ -> /prov/
         rewrite ^//prov/(.*)$ /prov/$1 last;
 
-        location /prov/ {
+        location / {
             proxy_pass http://127.0.0.1:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
