--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 annotated-types==0.7.0
 anyio==4.9.0
 click==8.1.8
+colorama==0.4.6
 exceptiongroup==1.3.0
 fastapi==0.115.13
+greenlet==3.2.4
 h11==0.16.0
 idna==3.10
 pydantic==2.11.7
 pydantic_core==2.33.2
+pydash==8.0.5
 sniffio==1.3.1
+SQLAlchemy==2.0.44
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 uvicorn==0.34.3
+xmltodict==1.0.2
