--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,9 +9,7 @@ http {
     default_type  application/octet-stream;
 
     sendfile        on;
-
     keepalive_timeout  65;
-  
     merge_slashes off; 
   
     server {
@@ -24,8 +22,7 @@ http {
         location / {
             proxy_pass http://127.0.0.1:8000;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        
+            proxy_set_header X-Real-IP $http_x_real_ip;
         }
     }
 
