--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ typing_extensions==4.14.0
 uvicorn==0.34.3
 xmltodict==1.0.2
 asyncpg==0.30.0
+
+# Documentation
+sphinx==7.2.6
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-mermaid==0.9.2
+sphinx-copybutton==0.5.2
+myst-parser==2.0.0
