env: Authentication by default is enabled.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # For the version with or without auth.
-VITE_AUTH_ENABLED=false
+VITE_AUTH_ENABLED=true
 
 # Specify the full base URL of the backend.
 VITE_API_BACKEND_URL=http://127.0.0.1:7373
