--- a/src/.env.example
+++ b/src/.env.example
@@ -1,5 +1,5 @@
 # Auth Configuration
-AUTH_ENABLED=false
+AUTH_ENABLED=true
 
 # JWT Configuration
 JWT_SECRET_KEY=2aeBhoJvbwafjkeyyq7Yqt0cSjShkiNoLs-5mT-H-w8
