--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,55 @@
+alabaster==0.7.16
+alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.9.0
+asyncpg==0.30.0
+babel==2.18.0
+bcrypt==5.0.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
 click==8.1.8
 colorama==0.4.6
+docutils==0.20.1
 exceptiongroup==1.3.0
 fastapi==0.115.13
 greenlet==3.2.4
 h11==0.16.0
 idna==3.10
+imagesize==1.4.1
+Jinja2==3.1.6
+Mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.3
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+myst-parser==2.0.0
+packaging==26.0
 pydantic==2.11.7
+pydantic-settings==2.11.0
 pydantic_core==2.33.2
 pydash==8.0.5
+Pygments==2.19.2
+PyJWT==2.11.0
+python-dotenv==1.2.1
+PyYAML==6.0.3
+requests==2.32.5
 sniffio==1.3.1
+snowballstemmer==3.0.1
+Sphinx==7.2.6
+sphinx-copybutton==0.5.2
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-mermaid==0.9.2
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 SQLAlchemy==2.0.44
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+urllib3==2.6.3
 uvicorn==0.34.3
 xmltodict==1.0.2
-asyncpg==0.30.0
-
-# Documentation
-sphinx==7.2.6
-sphinx-rtd-theme==2.0.0
-sphinxcontrib-mermaid==0.9.2
-sphinx-copybutton==0.5.2
-myst-parser==2.0.0
