chore: Nginx.example has been adjusted.

--- a/nginx.example/nginx.conf
+++ b/nginx.example/nginx.conf
@@ -23,28 +23,30 @@ http {
         server_name tvipstb.net localhost;
 
         # Исправление //prov/ -> /prov/
-        rewrite ^//prov/(.*)$ /prov/$1 last;
+        if ($request_uri ~* "^//prov/") {
+            rewrite ^//prov/(.*)$ /prov/$1 permanent;
+        }
 
         location ~ ^/(prov|api|docs|openapi\.json) {
             proxy_pass http://localhost:7373;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-                
-        # Обработка preflight запросов OPTIONS
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain; charset=utf-8';
-            add_header 'Content-Length' 0;
-            return 204;
+                    
+            # Обработка preflight запросов OPTIONS
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+        }
+
+        # Прокси для корневого пути / на localhost:8383 (и для всех остальных путей, не покрытых выше)
+        location / {
+            proxy_pass http://localhost:8383;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
     }
-
-    # Прокси для корневого пути / на localhost:8383 (и для всех остальных путей, не покрытых выше)
-    location / {
-        proxy_pass http://localhost:8383;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-}
     include servers/*;
 }
